# zeroer

./: .gitignore  docker-compose.yml  experiment.ipynb  requirements.txt  requirements_v1.txt
backend-server/: .env  Dockerfile  README.md  app.py  config.py  docker-compose.yml  extensions.py  gunicorn_config.py  pyproject.toml  requirements.txt
backend-server/controllers/: controller.py
backend-server/database/: .env  docker-compose.yaml  insert_users.sql  insert_users_relationship.sql  load_tables.sql
backend-server/dto/: response.py
backend-server/models/: model.py
consumer/: analyser.py  model.py
dataset/: db_user.csv  db_user_relationship.csv  processed.csv
datasets/abt_buy/: metadata.txt
model/: analyser.py  blocking_functions.py  model.py  single_entry_run.py  zeroer.py
model/data_loading_helper/: feature_extraction.py
model/datasets/dblp_acm/: metadata.txt
model/datasets/fodors_zagats/: candset_features_df.csv  fodors.csv  fodors_s.csv  metadata.txt  pred.csv
model/saved_models/: fodors_zagats_model.pkl
mysql/: create_tables.sql  insert_user_relationship.sql
mysql2/: insert_values2.sql  insert_values3.sql
rabbitmq/: definitions.json
scripts/: commit.sh
ui-zeroer/: .eslintrc.json  .gitignore  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui-zeroer/.husky/: pre-commit
ui-zeroer/src/: AddUser.tsx  App.tsx
ui-zeroer/src/components/sections/: DataSection.tsx  MainSection.tsx
ui-zeroer/src/components/ui/: checkbox.tsx  data-table.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  (+1 more)
(+13 files in other folders)
