[tool.poetry]
name = "backend-server"
version = "0.1.0"
description = ""
authors = ["ZheTao <zacharytao99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
flask-sqlalchemy = "^3.1.1"
flask = "^3.0.3"
pymysql = "^1.1.1"
flask-cors = "^4.0.1"
python-dotenv = "^1.0.1"
configparser = "^7.0.0"
gunicorn = "^22.0.0"
poetry-dotenv-plugin = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
